<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:padding="15dp">

            <!-- Profile Image -->
            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Notification Icon -->
            <ImageView
                android:id="@+id/ivNotification"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_notifications"
                app:layout_constraintBottom_toBottomOf="@+id/clCoins"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Coin Layout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:paddingHorizontal="6dp"
                android:layout_marginEnd="15dp"
                android:paddingVertical="6dp"
                app:layout_constraintEnd_toStartOf="@id/ivNotification"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivCoin"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_coin" />

                <TextView
                    android:id="@+id/tvCoins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/_2456"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/ivCoin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Banner ViewPager -->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerBanner"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="22dp"
                app:layout_constraintTop_toBottomOf="@id/ivProfile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Tab Layout -->
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/background_color"
                app:tabGravity="center"
                app:tabIndicatorGravity="center"
                app:tabIndicatorHeight="0dp"
                app:tabMode="fixed"
                app:tabRippleColor="@android:color/transparent"
                app:tabSelectedTextColor="@android:color/white"
                app:tabTextColor="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/viewPagerBanner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <!-- Play Tournament Text -->
            <TextView
                android:id="@+id/tvPlayTournament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_tournament_by_games"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tabLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp" />

            <!-- View All Text -->
            <TextView
                android:id="@+id/tvViewAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tabLayout"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp" />

            <!-- Games RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGames"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvViewAll"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp" />

            <!-- Divider -->
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rvGames"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="5dp"
                app:dividerColor="@color/gray" />

            <!-- Create Own Tournament Banner -->
            <ImageView
                android:id="@+id/ivCreateOwnTournamentBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_banner"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp" />

            <!-- Compete In Battles Text -->
            <TextView
                android:id="@+id/tvCompeteInBattles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compete_in_battles"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/ivCreateOwnTournamentBanner"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp" />

            <!-- View All Text for Tournaments -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/ivCreateOwnTournamentBanner"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp" />

            <!-- Tournaments RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTournaments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvCompeteInBattles"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp" />

            <!-- People to Follow Text -->
            <TextView
                android:id="@+id/tvPeopleToFollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/people_to_follow"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/rvTournaments"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp" />

            <!-- View More Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_more"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/rvTournaments"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="40dp" />

            <!-- Profiles RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProfiles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvPeopleToFollow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

