<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvTournaments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp">

        <RelativeLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@color/background_color">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@drawable/card_background"
                android:scaleType="fitXY"
                android:src="@drawable/ic_tournament" />


            <TextView
                android:id="@+id/registration_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_background"
                android:padding="8dp"
                android:text="@string/registration_open"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/rounded_background"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="5dp">


                <ImageView
                    android:layout_width="11dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_tournaments"
                    app:tint="@color/trophy_green" />

                <TextView
                    android:id="@+id/coin_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="3dp"
                    android:text="@string/_10000"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_coin" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:paddingHorizontal="12dp"
                android:paddingBottom="18dp">

                <TextView
                    android:id="@+id/tvTournamentTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/pubg_tournament_by_red_bull"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tournament_dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTournamentTitle"
                    android:layout_marginTop="8dp"
                    android:text="📅 Jun 26 - Jun 27, 2024"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/llEntryFee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tournament_dates"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/entry_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Entry - 10"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:src="@drawable/ic_coin" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tournament_dates"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/ic_groups" />

                    <TextView
                        android:id="@+id/tvParticipants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="670/800"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/llEntryFee"
                    android:layout_marginTop="20dp"
                    android:text="@string/see_tournament_details"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnNext"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_below="@id/llEntryFee"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/trophy_green"
                    app:cardCornerRadius="30dp">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/green"
                        android:src="@drawable/ic_arrow_forward"
                        android:textColor="@android:color/white" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>